--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" href="./images/logo-white.svg" type="image/svg+xml">
   </head>
   <body>
     <header class="header">
@@ -76,7 +77,7 @@
       <section class="about" id="about">
         <div class="about__column">
           <div class="about__logo">
-            <img src="/images/logo-white.svg" alt="Логотип" class="about__logo-image"/>
+            <img src="./images/logo-white.svg" alt="Логотип" class="about__logo-image"/>
           </div>
         </div>
         <div class="about__column">
