--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/global.css">
@@ -12,21 +12,20 @@
   </head>
   <body>
     <header class="header">
-        <nav class="header__menu">
-          <ul>
-            <a href="#cover" class="header__links-list-item_no-bullit">главная</a>
-            <li><a href="#lots" class="header__links-list-item">посмотреть лоты</a></li>
-            <li><a href="#about" class="header__links-list-item">об аукционе</a></li>
-          </ul>
-        </nav>
-        <a class="header__logo">
-          <img src="./images/logo-black.svg" alt="Логотип Оно тебе надо" class="header__logo-image">
-        </a>
-        <address class="header__links-list">
-          <a href="tel:+99995555555" class="header__links-list-item">+9 999 555 5555</a>
-          <a href="mailto:info@sobaka.ge" class="header__links-list-item">info@sobaka.ge</a>
-          <p>наб. Принсенграхт 263–265, Амстердам</p>
-        </address>
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit"><a href="#cover" class="header__list-item_no-decoration">главная</a></li>
+          <li class="header__links-list-item"><a href="#lots" class="header__list-item">посмотреть лоты</a></li>
+          <li class="header__links-list-item"><a href="#about" class="header__list-item">об аукционе</a></li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+      <img src="./images/logo-black.svg" alt="Логотип Оно тебе надо" class="header__logo-image"></a>
+      <address class="header__contacts">
+        <a href="tel:+99995555555" class="header__contacts-item">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" class="header__contacts-item">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263–265, Амстердам</p>
+      </address>
     </header>
     <main>
       <section class="cover" id="cover">
@@ -77,10 +76,10 @@
       <section class="about" id="about">
         <div class="about__column">
           <div class="about__logo">
-            <img src="./images/logo-white.svg" alt="Логотип" class="about__logo-image"/>
+            <img src="./images/logo-white.svg" alt="Логотип" class="about__logo-image">
           </div>
         </div>
-        <div class="about__column">
+        <div class="about__column-text">
             <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
