--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit"><a href="#cover" class="header__list-item_no-decoration">главная</a></li>
-          <li class="header__links-list-item"><a href="#lots" class="header__list-item">посмотреть лоты</a></li>
-          <li class="header__links-list-item"><a href="#about" class="header__list-item">об аукционе</a></li>
+          <li class="header__links-list-item"><a href="#lots" class="header__links-item">посмотреть лоты</a></li>
+          <li class="header__links-list-item"><a href="#about" class="header__links-item">об аукционе</a></li>
         </ul>
       </nav>
       <a class="header__logo">
