--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li class="header__links-list-item"><a href="#about" class="header__links-item">об аукционе</a></li>
         </ul>
       </nav>
-      <a class="header__logo">
+      <a href="#" class="header__logo">
       <img src="./images/logo-black.svg" alt="Логотип Оно тебе надо" class="header__logo-image"></a>
       <address class="header__contacts">
         <a href="tel:+99995555555" class="header__contacts-item">+9 999 555 5555</a>
