--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <address class="header__contacts">
         <a href="tel:+99995555555" class="address__link">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge" class="address__link">info@sobaka.ge</a>
-        <p class="address__text">наб. Принсенграхт 263–265, Амстердам</p>
+        <p>наб. Принсенграхт 263–265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -35,11 +35,6 @@
           <span class="aligned-text aligned-text_center">теб<span class="no-letter-spacing">e</span></span>
           <span class="aligned-text aligned-text_right">над<span class="no-letter-spacing">о</span></span>
         </h1>
-          <!-- <h1 class="cover__title">
-            <span class="aligned-text aligned-text_left">оно</span>
-            <span class="aligned-text aligned-text_center">тебе</span>
-            <span class="aligned-text aligned-text_right">надо</span>
-          </h1> -->
           <div class="cover__description">
             <p class="cover__description-text letter-spacing-extended">аукцион вещей, в которые <span class="no-letter-spacing">никто</span> не верил</p>
             <button class="bet-button">Сделать ставку</button>
