--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list"> 
-          <li class="header__links-list-item_no-bullit"><a href="#cover" class="header__link_active">главная</a></li> 
+          <li class="header__links-list-item header__links-list-item_no-bullit"><a href="#cover" class="header__link header__link_active">главная</a></li> 
           <li class="header__links-list-item"><a href="#lots" class="header__link">посмотреть лоты</a></li>
           <li class="header__links-list-item"><a href="#about" class="header__link">об аукционе</a></li>
         </ul>
